Fixed up CSS to look better on mobile
Needs testing

--- a/styles/index.css
+++ b/styles/index.css
@@ -8,6 +8,7 @@
     height: 100%;
     font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
       "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+      background-color: black;
   }
   
   #container {
@@ -25,19 +26,24 @@
     display: flex;
     flex-direction: column;
   }
+
+  #top {
+    border-bottom: 1px solid rgb(58, 58, 60);
+  }
   
   header {
-    border-bottom: 1px solid rgb(58, 58, 60);
+    margin-bottom: 4px;
   }
 
   .title {
     color: gainsboro;
-    font-size: 2.5rem;
+    font-size: 7vmin;
     font-weight: bold;
     margin: 0.4rem 0 0 0;
     text-align: center;
     font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
       "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    max-height: 10vw;
   }
 
   #name-bar {
@@ -47,7 +53,7 @@
   #leaderboard-button {
     font-family: inherit;
     font-weight: bold;
-    font-size: 1.5rem;
+    font-size: 4vmin;
     border: 0;
     padding: 2px;
     height: auto;
@@ -60,6 +66,8 @@
     margin-left: 6px;
     border-radius: 4px;
     user-select: none;
+    height: 7vmin;
+
   }
   
   #board-container {
@@ -68,6 +76,7 @@
     align-items: center;
     flex-grow: 1;
     overflow: hidden;
+    min-height: 50vh;
   }
   
   #board {
@@ -80,14 +89,13 @@
   
   .square {
     border: 2px solid rgb(58, 58, 60);
-    min-width: 60px;
-    max-height: 54px;
-    min-height: 54px;
-    font-size: 50px;
+    min-width: 75px;
+    max-height: 7vh;
+    min-height: 7vh;
+    font-size: 6vmin;
     font-weight: bold;
     color: gainsboro;
     text-transform: uppercase;
-  
     display: flex;
     justify-content: center;
     align-items: center;
@@ -104,17 +112,20 @@
       "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
     justify-content: center;
     align-items:center;
+    height: 3vw;
+  }
+
+  #blank-space {
+    min-height: 1vw;
+    max-height: 1vw;
   }
   
-  #keyboard-container {
-    height: 200px;
-  }
   
   .keyboard-row {
     display: flex;
     justify-content: center;
     width: 100%;
-    margin: 0 auto 8px;
+    margin: 0 4px 4px;
     touch-action: manipulation;
   }
   
@@ -123,7 +134,7 @@
     font-weight: bold;
     border: 0;
     padding: 0;
-    height: 58px;
+    height: 7vh;
     cursor: pointer;
     background-color: rgb(129, 131, 132);
     color: rgb(215, 218, 220);
@@ -140,4 +151,17 @@
   
   .spacer-half {
     flex-grow: 0.5;
+  }
+
+  @media only screen and (max-width: 850px){
+    #game {
+      width: 100vw;
+    }
+    .square {
+      min-width: 10vw;
+    }
+
+    #message-output {
+      font-size: 1rem;
+    }
   }
